增加游戏生命进度

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,6 @@
 {
   "app_up": "UP",
   "app_pop_1_2_tips1": "Friend visit gift",
-  "app_pop_1_2_tips2": "Earning speed up"
+  "app_pop_1_2_tips2": "Earning speed up",
+  "app_satiety": "Satiety"
 }
