--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,5 +2,9 @@
   "app_up": "UP",
   "app_pop_1_2_tips1": "Friend visit gift",
   "app_pop_1_2_tips2": "Earning speed up",
-  "app_satiety": "Satiety"
+  "app_satiety": "Satiety",
+  "app_fail_title": "WEALTH INTERRUPTION",
+  "app_resurrection": "Resurrection",
+  "app_starting_over": "Starting Over",
+  "app_resurrection_tips": "Resurrection costs $10"
 }
