--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -7,5 +7,6 @@
   "app_resurrection": "Resurrection",
   "app_starting_over": "Starting Over",
   "app_resurrection_tips": "Resurrection costs $10",
-  "app_not_enough_food": "Not enough food"
+  "app_not_enough_food": "Not enough food",
+  "app_level_up": "Level Up"
 }
