增加危险引导

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,6 +17,7 @@
   "app_contact_us": "Contact Us",
   "app_privacy_policy": "Privacy Policy",
   "app_level_up_tips1": "Level Up = ",
-  "app_level_up_tips2": "Auto Earnings Unlocked!"
+  "app_level_up_tips2": "Auto Earnings Unlocked!",
+  "app_danger_tips": "Warning! enable shield to prevent cash loss!"
 
 }
