新用户引导流程修改增加漂流瓶弹窗

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,6 +19,9 @@
   "app_level_up_tips1": "Level Up = ",
   "app_level_up_tips2": "Auto Earnings Unlocked!",
   "app_danger_tips": "Warning! enable shield to prevent cash loss!",
-  "app_spin": "Spin"
+  "app_spin": "Spin",
+  "app_all": "All",
+  "app_props_tips": "The tides have washed ashore untold wealth... Will you claim pearls or fortune",
+  "app_award_first_tips": "Treasure Gifts From The Waves"
 
 }
