--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -61,5 +61,7 @@
   "app_complete": "Complete",
   "app_title_cash_error": "Not Enough To Withdraw Yet",
   "app_play_now": "Play Now",
+  "app_mask6_tips": "Choose the type you usually use",
+  "app_mask7_tips": "Reach $500 to cash out—try now!",
   "app_content_cash_error": "Play Now & Instantly Win UP TO {money}!Top up easily and withdraw instantly!"
 }
