--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -63,5 +63,8 @@
   "app_play_now": "Play Now",
   "app_mask6_tips": "Choose the type you usually use",
   "app_mask7_tips": "Reach $500 to cash out—try now!",
-  "app_content_cash_error": "Play Now & Instantly Win UP TO {money}!Top up easily and withdraw instantly!"
+  "app_content_cash_error": "Play Now & Instantly Win UP TO {money}!Top up easily and withdraw instantly!",
+  "app_withdraw_approval": "Withdraw Approval",
+  "app_cash_queue": "Congratulations, You are in the withdrawal approval queue.",
+  "app_cash_queue_tips": "{allCount} in queue，Your Current rank {currentCount}"
 }
