--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -86,5 +86,8 @@
   "nf_t3_1": "\uD83C\uDF81 Mystery Gift in Bottle!",
   "nf_t3_2": "$100 Fast – Boost activated!",
   "nf_c3_1": "Special reward from the ocean - tap to discover!",
-  "nf_c3_2": "Your $100 Fast ticket is ready!"
+  "nf_c3_2": "Your $100 Fast ticket is ready!",
+
+  "app_play_game": "Play Game",
+  "app_game_tips": "Please first check the privacy policy and terms of service."
 }
