增加启动页

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -89,5 +89,5 @@
   "nf_c3_2": "Your $100 Fast ticket is ready!",
 
   "app_play_game": "Play Game",
-  "app_game_tips": "Please first check the privacy policy and terms of service."
+  "app_login_tips": "Please first check the privacy policy and terms of service."
 }
