--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -91,5 +91,6 @@
 
   "app_play_game": "Play Game",
   "app_login_tips": "Please first check the privacy policy and terms of service.",
-  "app_ad_no_cache": "Ad failed, earnings stopped"
+  "app_ad_no_cache": "Ad failed, earnings stopped",
+  "app_offline_title": "Psst... your fish made money!"
 }
