--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -97,5 +97,6 @@
   "app_ad_try_again": "Try Again",
   "app_limit_withdraw": "Limit met  withdraw now！！",
   "app_right_now": "Right Now",
-  "app_cash_info_error": "The format you entered is incorrect"
+  "app_cash_info_error": "The format you entered is incorrect",
+  "app_game_fail_content": "starved to death couldn’t make money"
 }
