--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -109,5 +109,7 @@
   "app_game_protect_pop_button1": "Buy for $50",
   "app_game_protect_pop_button2": "Free Protection",
   "app_wealth_paused": "Wealth Paused",
-  "app_more_fun": "More Fun"
+  "app_more_fun": "More Fun",
+  "app_ok": "OK",
+  "app_ad_limit_content": "You’ve watched all available ads for today. try again tomorrow."
 }
