--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -7,7 +7,7 @@
   "app_no_pearls": "NO PEARLS",
   "app_resurrection": "Resurrection",
   "app_starting_over": "Starting Over",
-  "app_resurrection_tips": "Resurrection cost is 10 gold coins",
+  "app_resurrection_tips": "Resurrection cost is $50",
   "app_not_enough_food": "Not enough food",
   "app_level_up": "Level Up",
   "app_claim": "Claim",
