--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -60,6 +60,9 @@
   "app_task5_content": "Your withdrawal is pending compliance review. Complete the required steps to validate your account and release funds.",
   "app_complete": "Complete",
   "app_title_cash_error": "Not Enough To Withdraw Yet",
+  "app_title_cash_success": "Congratulations!",
+  "app_content_cash_success": "We have completed the payment.And the funds will be creadited to your bank account within 7 business days.",
+  "app_button_cash_success": "Instantly Credited",
   "app_play_now": "Play Now",
   "app_mask6_tips": "Choose the type you usually use",
   "app_mask7_tips": "Reach $500 to cash out—try now!",
