--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -114,6 +114,7 @@
   "app_wealth_paused": "Wealth Paused",
   "app_more_fun": "More Fun",
   "app_ok": "OK",
+  "app_game": "Game",
   "app_ad_limit_content": "You’ve watched all available ads for today. try again tomorrow.",
   "app_need_seconds": "Remaining Time: {count} Seconds",
   "app_cash_rank_content": "Payment in queue...",
