--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -118,5 +118,5 @@
   "app_ad_limit_content": "You’ve watched all available ads for today. try again tomorrow.",
   "app_need_seconds": "Remaining Time: {count} Seconds",
   "app_cash_rank_content": "Payment in queue...",
-  "app_cash_rank_complete": "Payment completed. Funds will \narrive within 7 business days"
+  "app_cash_rank_complete": "Payment completed. Funds will arrive within 7 business days"
 }
